fix ( z-index error )

--- a/src/pages/bookpage/bookpage.css
+++ b/src/pages/bookpage/bookpage.css
@@ -48,6 +48,7 @@
   position: absolute;
   right: 3em;
   top: 2em;
+  z-index: 1000;
   width: 100px;
 }
 
